--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.11"
 flake8 = "^6.0.0"
 pytest = "^7.2.2"
 pre-commit = "^3.2.0"
+black = "^23.1.0"
 
 [build-system]
 requires = ["poetry-core"]
