--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,9 +8,9 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
-repos:
--   repo: https://github.com/ambv/black
-    rev: stable
-    hooks:
-    - id: black
-      language_version: python3.11
+# repos:
+# -   repo: https://github.com/ambv/black
+#     rev: stable
+#     hooks:
+#     - id: black
+#       language_version: python3.11
